--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <div class="login-box">
     <input id="username" type="text" placeholder="Username" required />
-    <input id="password" type="password" placeholder="Password" required />
+    <input id="password" type="password" placeholder="Code" required />
     <button onclick="checkLogin()">Login</button>
   </div>
 
