--- a/second.html
+++ b/second.html
@@ -50,7 +50,7 @@
       Yize noma kunjalo, uyohlezi uw'Bhuti omncane kimi.
       
       Sengivala, 
-      Ngithi Happy 44ᵗʰ birthday, ukhule ukhokhobi, 
+      Ngithi Happy 44th birthday, ukhule ukhokhobi, 
       usale nezinyo elilodwa.
       
       Uyamazi obhalayo.
