--- a/four.html
+++ b/four.html
@@ -29,7 +29,7 @@
     <img src="images/small%20boy.jpg" alt="3.">
     <img src="images/18.jpg" alt="1.">
      <br>
-      
+    <a href="vid.html"><img src= "images/Laptop.jpg"/></a>  
 
     <!-- More photos -->
   </div>
