--- a/vid.html
+++ b/vid.html
@@ -20,19 +20,11 @@
 <body>
   <h1>eCinema</h1>
     <p>(Mahala ha)</p>
-
-  <video controls autoplay muted>
-    <source src="video/vid1.mp4" type="video/mp4">  
-  </video>
-    <video controls autoplay muted>
-    <source src="video/vid2.mp4" type="video/mp4">  
-  </video>
-    <video controls autoplay muted>
-    <source src="video/vid3.mp4" type="video/mp4">  
-  </video>
-    <video controls autoplay muted>
-    <source src="video/vid4.mp4" type="video/mp4">  
-  </video>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/petdsiZNKLo?si=mHNiJCm6zTsiyvvx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/d0oQD9uEFKQ?si=NeN2-t4bEWO-Ohnd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/m70WB88HEUA?si=2xMkpWYBTmFdMdiQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/fLaRvKoZVIY?si=iYcG9FzIl8OqyD7C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
     <h2>ok, sek'phelile, Hamba. </h2>
 
   <p><a href="home
