--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 <body>
 
   <div class="login-box">
-    <input id="username" type="text" placeholder="Username" required />
-    <input id="password" type="password" placeholder="Code" required />
+    <input id="username" type="text" placeholder="User" required />
+    <input id="password" type="password" placeholder="ID" required />
     <button onclick="checkLogin()">Login</button>
   </div>
 
@@ -70,7 +70,7 @@
       const pass = document.getElementById("password").value;
       const message = document.getElementById("message");
 
-      if (pass === "003") {
+      if (pass === "0307075696087") {
         message.innerHTML = "Success";
         message.style.color = "#0f0";
         setTimeout(() => {
