--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
 <body>
   <div class="hero">
     <h1>Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy suku lokuzalwa, Mthobhisi!</h1>
-    <p>Chosen one.</p>
-      <p>Happy 44ᵗʰ Birthday.</p>
+    <h3>Chosen one.</h>
+      <p>Happy 44ᵗʰ Birthday. choose one...</p>
     
     <audio controls autoplay loop>
       <source src="audio/Hero.mp3" type="audio/mp3">
