--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="hero">
-    <h1>Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy suku lokuzalwa, Mthobhisi!</h1>
+    <h1>Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy Happy suku lokuzalwa, Mthobisi!</h1>
     <h3>Chosen one.</h>
       <p>Happy 44ᵗʰ Birthday. choose one...</p>
     
