--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-  <title>Happy Birthday, Bro!</title>
+  <title>Kushuti Happy Birthday, 1/5</title>
   <style>
     body { font-family: Arial; background: #111; color: #fff; text-align: center; }
     .hero { padding: 50px; }
