--- a/second.html
+++ b/second.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-  <title>Message</title>
+  <title>Message, 2/5</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
