--- a/vid.html
+++ b/vid.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Video Page</title>
+  <title>Steak eneSkoko, 5/5</title>
   <style>
     body {
       background-color: black;
